# streamlit-howest-template

./: .gitignore  README.md  app.py  change_config_script.py  example.py  pyproject.toml  readme-template.md
.devcontainer/: Readme.md  devcontainer.json
.devcontainer/scripts/: create_python_env.sh  post_create.sh  post_start.sh
.streamlit/: change_streamlit_config.py  config.toml
components/: components.py
style/: font.css  style.css  style.py
utils/: utils.py
